# aalaclaw

./: README.md  pyproject.toml
.trae/: mcp.json
scripts/: check.ps1
src/aalaclaw/: __init__.py  __main__.py
src/aalaclaw/cli/: commands.py
