[project]
name = "aalaclaw"
description = "Adaptive AI Learning Assistant"
version = "0.1.0.alpha.1"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }
dependencies = [
  "typer==0.24.1",
  "rich==14.3.3",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.2",
  "pyright==1.1.408",
  "pytest==9.0.2",
]

[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
